# MSP

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SECURITY.md  STATUS.md
examples/: e2e_training.py
src/cpp/: bindings.cpp  elora_allocator.cpp  elora_allocator.hpp
src/cuda/: fused_msp_backward_kernel.cu
src/daemon/: integrity_check.c  integrity_check.h  sandbox_watchdog.c  sandbox_watchdog.h  telemetry_server.c  telemetry_server.h  thermal_reader.c  thermal_reader.h  watchdogd_main.c
src/python/msp/: __init__.py  adapter_manager.py  persistence.py  plugin_layer.py  thermal.py  watchdog_control.py
tests/cpp/: test_elora_allocator.cpp
tests/cuda/: validate_gradient_kernel.py
tests/daemon/: test_integrity_check.c  test_telemetry_server.c  test_thermal_reader.c  test_watchdog.c
tests/python/: test_adapter_manager.py  test_e2e_training_example.py  test_persistence.py  test_plugin_layer.py  test_thermal.py  test_watchdog_control.py
